src/revmywrf/slurm_outputs/calc_weighted_ss_qss_avg_v1.txt
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py", line 80
    dz = np.array([z_bins[i+1] - z_bins[i] for i in \
     ^
SyntaxError: invalid syntax
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/ss_qss_calculations.py:72: RuntimeWarning: invalid value encountered in true_divide
  return meanr/nconc
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py:74: RuntimeWarning: Mean of empty slice
  ss_qss_tz = np.nanmean(ss_qss, axis=(2,3))
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py:76: RuntimeWarning: Mean of empty slice
  pres_tz = np.nanmean(pres, axis=(2,3))
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py:77: RuntimeWarning: Mean of empty slice
  temp_tz = np.nanmean(temp, axis=(2,3))
Traceback (most recent call last):
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py", line 140, in <module>
    main()
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py", line 31, in main
    calc_weighted_ss_qss_avg(case_label)
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py", line 83, in calc_weighted_ss_qss_avg
    ss_qss_wtd_avg = np.sum(dt*dz*A_tz*qvstar_tz*ss_qss_tz)\
ValueError: operands could not be broadcast together with shapes (84,66) (84,48) 
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/ss_qss_calculations.py:72: RuntimeWarning: invalid value encountered in true_divide
  return meanr/nconc
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py:74: RuntimeWarning: Mean of empty slice
  ss_qss_tz = np.nanmean(ss_qss, axis=(2,3))
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py:76: RuntimeWarning: Mean of empty slice
  pres_tz = np.nanmean(pres, axis=(2,3))
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py:77: RuntimeWarning: Mean of empty slice
  temp_tz = np.nanmean(temp, axis=(2,3))
Traceback (most recent call last):
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py", line 155, in <module>
    main()
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py", line 31, in main
    calc_weighted_ss_qss_avg(case_label)
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py", line 88, in calc_weighted_ss_qss_avg
    *ss_qss_tz[:, :z_max_ind])\
ValueError: operands could not be broadcast together with shapes (84,66) (84,48) 
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/ss_qss_calculations.py:72: RuntimeWarning: invalid value encountered in true_divide
  return meanr/nconc
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py:74: RuntimeWarning: Mean of empty slice
  ss_qss_tz = np.nanmean(ss_qss, axis=(2,3))
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py:76: RuntimeWarning: Mean of empty slice
  pres_tz = np.nanmean(pres, axis=(2,3))
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py:77: RuntimeWarning: Mean of empty slice
  temp_tz = np.nanmean(temp, axis=(2,3))
ss (84, 66)
Traceback (most recent call last):
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py", line 158, in <module>
    main()
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py", line 31, in main
    calc_weighted_ss_qss_avg(case_label)
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py", line 84, in calc_weighted_ss_qss_avg
    print('ss cutoff', ss_qss_tz[:, :z_max_ind].shape)
UnboundLocalError: local variable 'z_max_ind' referenced before assignment
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/ss_qss_calculations.py:72: RuntimeWarning: invalid value encountered in true_divide
  return meanr/nconc
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py:74: RuntimeWarning: Mean of empty slice
  ss_qss_tz = np.nanmean(ss_qss, axis=(2,3))
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py:76: RuntimeWarning: Mean of empty slice
  pres_tz = np.nanmean(pres, axis=(2,3))
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py:77: RuntimeWarning: Mean of empty slice
  temp_tz = np.nanmean(temp, axis=(2,3))
ss (84, 66)
ss cutoff (84, 66)
dz (84, 48)
A_tz (84, 66)
qvstar_tz (84, 66)
dt (84, 66)
Traceback (most recent call last):
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py", line 161, in <module>
    main()
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py", line 31, in main
    calc_weighted_ss_qss_avg(case_label)
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py", line 94, in calc_weighted_ss_qss_avg
    *ss_qss_tz[:, :z_max_ind])\
ValueError: operands could not be broadcast together with shapes (84,66) (84,48) 
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/ss_qss_calculations.py:72: RuntimeWarning: invalid value encountered in true_divide
  return meanr/nconc
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py:74: RuntimeWarning: Mean of empty slice
  ss_qss_tz = np.nanmean(ss_qss, axis=(2,3))
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py:76: RuntimeWarning: Mean of empty slice
  pres_tz = np.nanmean(pres, axis=(2,3))
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py:77: RuntimeWarning: Mean of empty slice
  temp_tz = np.nanmean(temp, axis=(2,3))
ss (84, 66)
ss cutoff (84, 48)
dz (84, 48)
A_tz (84, 66)
qvstar_tz (84, 66)
dt (84, 66)
Polluted allpts
2.6226228653398307
Traceback (most recent call last):
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py", line 161, in <module>
    main()
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py", line 31, in main
    calc_weighted_ss_qss_avg(case_label)
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py", line 113, in calc_weighted_ss_qss_avg
    ss_qss_tz = custom_nanmean(ss_qss, axis=(2,3))
NameError: name 'custom_nanmean' is not defined
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/ss_qss_calculations.py:72: RuntimeWarning: invalid value encountered in true_divide
  return meanr/nconc
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py:74: RuntimeWarning: Mean of empty slice
  ss_qss_tz = np.nanmean(ss_qss, axis=(2,3))
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py:76: RuntimeWarning: Mean of empty slice
  pres_tz = np.nanmean(pres, axis=(2,3))
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py:77: RuntimeWarning: Mean of empty slice
  temp_tz = np.nanmean(temp, axis=(2,3))
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py:113: RuntimeWarning: Mean of empty slice
  ss_qss_tz = np.nanmean(ss_qss, axis=(2,3))
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py:115: RuntimeWarning: Mean of empty slice
  pres_tz = np.nanmean(pres, axis=(2,3))
/global/home/users/kalatimer/proj/20supersat/src/revmywrf/calc_weighted_ss_qss_avg.py:116: RuntimeWarning: Mean of empty slice
  temp_tz = np.nanmean(temp, axis=(2,3))
ss (84, 66)
ss cutoff (84, 48)
dz (84, 48)
A_tz (84, 66)
qvstar_tz (84, 66)
dt (84, 66)
Polluted allpts
2.6226228653398307
Polluted up10perc
4.708305869462911
ss (84, 66)
ss cutoff (84, 48)
dz (84, 48)
A_tz (84, 66)
qvstar_tz (84, 66)
dt (84, 66)
Unpolluted allpts
3.743886642945627
Unpolluted up10perc
6.378998856058444
